	ZMRuntime::seThemeId(...)]
- decouple cache type from actual implementation
- add memcache cache provider
- make group text clickable in cache admin
- fix missing review sidebox image; b:#2384599
- fix b:#2387935; display configured site switch data
- more define/const refactoring
- make zm_page_stats create valid HTML/XHTML

Release 0.9.3
- prefix all variables used in init.php and store.php with _zm_, as some might
  conflict with zm_wordpress
- add support for permalinks to zm_wordpress (Apache httpd only)
- set authorization flag properly for new accounts
- fix broken gv_mail emails; b:#2090853
- zm_site_switch: improve db access code, fix view warning
- fix broken use of deprecated $zm_xxx global
- add support for new ZM_EVENT_CREATE_ORDER event
- fixed some confusion about ZMOrder::status - needs template changes to:
  * resultlist/order.php
	* emails/order_status.html.php
	* emails/order_status.text.php
	getStatus() changed to getStatusName() [read only]
- make custom fields work properly on orders table
- zm_auto_login: update cookie only if it exists; otherwise a new cookie will
  be set even with opt in enabled!
- zm_cron: fix broken 'Missed run policy' setting
- zm_cron: supress warning if history file is not found (which will happen the
  first time the plugin is run)
- switch to proper logging service; add new setting to allow to configure the
  actual implementation: 'loggingProvider'
- catch controller exceptions
- zm_page_stats: handle exception if available
- removed unused setting 'defaultProductSortOrder'
- move plugin init further up; this means plugins can't use the legacy globals
  any more
- add class loader support for filesnames a la [class name].class.php
- improve logging
- add exception handler to ZMLogging
- change ZMRegexpRule to use preg_match and be case sensitive
- add licence files for compressed 3rd party libraries
- add new optional parameter to ZMToolboxMacro::productPrice() that allows to
  explicitely enable/disable tax