@@ -52,7 +52,7 @@ class pcaptcha {
 		if(defined('CAPTCHA_CHARS_MAX_SIZE')) $this->chars_max_size = CAPTCHA_CHARS_MAX_SIZE;
 		if(defined('CAPTCHA_CHARS_ROTATION')) $this->chars_rotation = CAPTCHA_CHARS_ROTATION;
 		if(defined('DIR_FS_CATALOG')) $this->dir_fs_fonts = DIR_FS_CATALOG . 'fonts/';
-		$this->dir_fs_fonts = $zm_captcha->getPluginDir() . 'fonts/';
+		$this->dir_fs_fonts = $zm_captcha->getConfigPath('fonts/');
 		if(defined('CAPTCHA_MAX_TRY')) $this->max_try = CAPTCHA_MAX_TRY;
 		if(defined('CAPTCHA_FAILURE_PROC')) $this->failure_proc = CAPTCHA_FAILURE_PROC;
 
